using a component as a directive

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,5 +1,20 @@
 <div class="card">
-    <div class="card-reader">
-        Product List
-    </div>
+  <div class="card-reader">Product List</div>
+</div>
+<div class="'table-responseive">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>
+          <button class="btn btn-primary">Show Image</button>
+        </th>
+        <th>Product</th>
+        <th>Code</th>
+        <th>Availble</th>
+        <th>Price</th>
+        <th>5 Star Rating</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
