--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,7 +1,23 @@
 <div class="card">
-  <div class="card-reader">Product List</div>
-</div>
-<div class="'table-responseive">
+  <div class="card-header">
+    {{ pageTitle }}
+  </div>
+
+<div class="card-body">
+  <div class="row">
+    <div class="col-md-2">Filter By:</div>
+    <div class="col-md-4">
+      <input type="text" />
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h4>Filtered By:</h4>
+    </div>
+  </div>
+
+<div class="table-responsive">
   <table class="table">
     <thead>
       <tr>
@@ -17,4 +33,6 @@
     </thead>
     <tbody></tbody>
   </table>
+</div>
+</div>
 </div>
