--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -7,13 +7,15 @@
     <div class="row">
       <div class="col-md-2">Filter By:</div>
       <div class="col-md-4">
-        <input type="text" />
+        <input type="text"
+        [(ngModel)] = "listFilter"
+        />
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-6">
-        <h4>Filtered By:</h4>
+        <h4>Filtered By: {{listFilter}}</h4>
       </div>
     </div>
 
