--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -7,15 +7,13 @@
     <div class="row">
       <div class="col-md-2">Filter By:</div>
       <div class="col-md-4">
-        <input type="text"
-        [(ngModel)] = "listFilter"
-        />
+        <input type="text" [(ngModel)]="listFilter" />
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-6">
-        <h4>Filtered By: {{listFilter}}</h4>
+        <h4>Filtered By: {{ listFilter }}</h4>
       </div>
     </div>
 
@@ -47,9 +45,9 @@
               />
             </td>
             <td>{{ product.productName }}</td>
-            <td>{{ product.productCode }}</td>
+            <td>{{ product.productCode | lowercase}}</td>
             <td>{{ product.releaseDate }}</td>
-            <td>{{ product.price }}</td>
+            <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
             <td>{{ product.starRating }}</td>
           </tr>
         </tbody>
